branding for 7.3, snake case adjustment

--- a/src/legacy/ui/public/exit_full_screen/_exit_full_screen_button.scss
+++ b/src/legacy/ui/public/exit_full_screen/_exit_full_screen_button.scss
@@ -42,7 +42,7 @@
 
   // These numbers are very specific to the Kibana logo size
   width: 92px;
-  background-image: url('ui/assets/images/kibana.svg');
+  background-image: url('https://www.desmogblog.com/sites/beta.desmogblog.com/files/styles/full_width_blog_image/public/blogimages/GE.png?itok=f-eRF5yd');
   background-position: 8px 5px;
   background-size: 72px 30px;
   background-repeat: no-repeat;
